This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
5/9/21: Fixed ReportIfNavOpen to give 1 when no file defined (In 3.8).

5/5/21: Added ability to embed Python inside regular scripts.

5/5/21: Fixed display of multi-shot areas when multiple holes not selected (In
3.8).

5/5/21: Saved existing script package under a new name when reading settings
with no script pack entry because it was being overwritten (In 3.8).

5/3/21: Made the program stop tasks before exiting so that beam tilt and other
states gets restored, after asking the user to confirm.

4/30/21: Fixed crash displaying hole finder points when montage analysis fails
(In 3.8).

4/29/21: Fix potential crash changing STEM mag on JEOL.

4/29/21: Allowed a regular script function to be called from Python, switched
to collecting standard output from Python and putting it in the log so that
the standard 'print' function could be used.

4/28/21: Allowed a regular script to be called from a Python script, and a
Python script to be called from a regular script.  Added ability to return
values from a function or script call with the Return command.

4/27/21: Fixed uninitialized values in stage restore for dose-symmetric series
(In 3.8).

4/26/21: Fixes for Python: make sure Python is killed when SerialEM crashes,
escape backslashes so they are not misinterpreted in Python, add library to
module package.

4/23/21: Changed Python scripting to run Python executable with script to
solve import problems; this also allows external control from a Python
script.  Added a command to place an image into a buffer.

4/21/21: SEM_3-9-0beta7
4/21/21: Fixed OpenMP library conflict in SEMMCCD plugin that ruined antialias
reduction at least in GMS 3.43.

4/16/21: SEM_3-9-0beta6