@@ -559,6 +559,13 @@
             per inch&nbsp; in TIFF snapshots, or to a specific value greater than 1 to set 
             that value as the DPI.&nbsp; The default is 1 to store pixel size.</TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>EndIfVersionBelow</TD>
+          <TD>Stop reading properties if the integer version number of the program is below 
+            the given value.&nbsp; The integer version is 10000 times the first digit, plus 
+            100 times the release number, plus the update value; thus use 30900 tol skip 
+            properties not defined in version 3.8.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A NAME="general_camera_properties"></A><B>General camera control properties</B></P>
