@@ -3,6 +3,16 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+5/10/21: SEM_3-8-9
+5/10/21: Added property to stop reading properties before ones defined in a
+later (beta) version (In 3.8)
+
+5/10/21: Fixed STEM detector name displayed and saved in mdoc when detectors
+are mapped to Digiscan channels (In 3.8).
+
+5/10/21: Fixed reading of DE camera server property for scaling of counting
+mode images (In 3.8).
+
 5/9/21: Fixed ReportIfNavOpen to give 1 when no file defined (In 3.8).
 
 5/5/21: Added ability to embed Python inside regular scripts.
